conditions.Conditions.scala.error
Erreur de compilation :
Conditions:2: error: '=' expected but '(' found.
   avance()
         ^Conditions:3: error: illegal start of simple expression
   if (estFaceMur=true) {recule(1:Int);}
^