conditions.Conditions.scala.code
def estFaceMur():
   avance()
   if (estFaceMur=true) {recule(1:Int);}
   else {avance(1:Int);}